--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ list(APPEND PIXFC_SRC_LIST
 	conversion_routines_from_uyvy_bt601.c
 	conversion_routines_from_uyvy_bt709.c
 	conversion_routines_from_argb.c
+	conversion_routines_from_argb_bt601.c
+	conversion_routines_from_argb_bt709.c
 )
 
 # Source files for test apps
