trunk: move GIMP RGB image from test-util into its own source file so unit-testing does not carry it

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,15 +1,4 @@
 
-# Source files for test apps
-set(TEST_UTIL_SRC_LIST
-	test-utils.c
-)
-
-# Header files for test apps
-set(TEST_UTIL_HDR_LIST
-	test-utils.h
-	rgb_image.h
-)
-
 # TODO: update tools so they only use the public interface rather than internal headers
 include_directories(AFTER include ../src)
 
@@ -21,10 +10,10 @@ endif(NOT WIN32)
 # UNIT TESTING TARGET
 #
 # Create groups for XCode and VS
-source_group("source files" FILES unit-testing.c ${TEST_UTIL_SRC_LIST})
-source_group("header files" FILES ${TEST_UTIL_HDR_LIST})
+source_group("source files" FILES unit-testing.c test-utils.c)
+source_group("header files" FILES test-utils.h)
 # Create unit testing app
-add_executable(unit-testing unit-testing.c ${TEST_UTIL_SRC_LIST} ${TEST_UTIL_HDR_LIST})
+add_executable(unit-testing unit-testing.c test-utils.c test-utils.h)
 if(WIN32 OR APPLE)
 	target_link_libraries(unit-testing pixfc-sse)
 else(WIN32 OR APPLE)
@@ -36,10 +25,10 @@ endif(WIN32 OR APPLE)
 # FILE CONVERT TARGET
 #
 # Create groups for XCode and VS
-source_group("source files" FILES convert-to-file.c ${TEST_UTIL_SRC_LIST})
-source_group("header files" FILES ${TEST_UTIL_HDR_LIST})
+source_group("source files" FILES convert-to-file.c test-utils.c rgb_image.c)
+source_group("header files" FILES test-utils.h rgb_image.h)
 # Create unit testing app
-add_executable(convert-to-file convert-to-file.c ${TEST_UTIL_SRC_LIST} ${TEST_UTIL_HDR_LIST})
+add_executable(convert-to-file convert-to-file.c test-utils.c rgb_image.c test-utils.h rgb_image.h)
 if(WIN32 OR APPLE)
 	target_link_libraries(convert-to-file pixfc-sse)
 else(WIN32 OR APPLE)
@@ -50,10 +39,10 @@ endif(WIN32 OR APPLE)
 #  VISUAL CHECK TARGET
 #
 # Create groups for XCode and VS
-source_group("source files" FILES visual-check.c ${TEST_UTIL_SRC_LIST})
-source_group("header files" FILES ${TEST_UTIL_HDR_LIST})
+source_group("source files" FILES visual-check.c test-utils.c rgb_image.c)
+source_group("header files" FILES test-utils.h rgb_image.h)
 # Create visual check app
-add_executable(visual-check visual-check.c ${TEST_UTIL_SRC_LIST} ${TEST_UTIL_HDR_LIST})
+add_executable(visual-check visual-check.c test-utils.c rgb_image.c test-utils.h rgb_image.h)
 if(WIN32 OR APPLE)
 	target_link_libraries(visual-check pixfc-sse)
 else(WIN32 OR APPLE)
