--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,9 @@ list(APPEND PIXFC_SRC_LIST
 	conversion_routines_from_yuyv.c
 	conversion_routines_from_yuyv_bt601.c
 	conversion_routines_from_yuyv_bt709.c
+	conversion_routines_from_yuv422p.c
+	conversion_routines_from_yuv422p_bt601.c
+	conversion_routines_from_yuv422p_bt709.c
 	conversion_routines_from_uyvy.c
 	conversion_routines_from_uyvy_bt601.c
 	conversion_routines_from_uyvy_bt709.c
@@ -51,22 +54,6 @@ list(APPEND EXTERN_INLINE_ALIGN_HEADER_LIST
 	rgb_unpack
 	yuv_pack
 )
-function(GenerateExternInlines)
-	foreach(CUR_FILE ${EXTERN_INLINE_HEADER_LIST})
-		file(READ ${CUR_FILE}.h FILE_CONTENTS)
-		string(REPLACE "EXTERN_INLINE " "inline " NEW_CONTENTS "${FILE_CONTENTS}")
-		file(WRITE ${CUR_FILE}.c "${NEW_CONTENTS}")
-	endforeach(CUR_FILE)
-
-	foreach(CUR_FILE ${EXTERN_INLINE_ALIGN_HEADER_LIST})
-		file(READ ${CUR_FILE}.h FILE_CONTENTS)
-		string(REPLACE "EXTERN_INLINE " "inline " NEW_CONTENTS "${FILE_CONTENTS}")
-		file(WRITE ${CUR_FILE}_unaligned.c "#define GENERATE_UNALIGNED_INLINES 1")
-		file(APPEND ${CUR_FILE}_unaligned.c "${NEW_CONTENTS}")
-		file(WRITE ${CUR_FILE}_aligned.c "#define GENERATE_UNALIGNED_INLINES 0")
-		file(APPEND ${CUR_FILE}_aligned.c "${NEW_CONTENTS}")
-	endforeach(CUR_FILE)
-endfunction(GenerateExternInlines)
 
 
 # Add compiler options
@@ -133,17 +120,3 @@ source_group("header files" FILES ${PIXFC_HDR_LIST})
 add_library(pixfc-sse STATIC ${PIXFC_SRC_LIST} ${PIXFC_HDR_LIST})
 
 
-
-#
-# CLEAN TARGET
-#
-foreach(CUR_FILE ${EXTERN_INLINE_HEADER_LIST})
-	list(APPEND EXTERN_INLINE_SRC_LIST "${CUR_FILE}.c")
-endforeach(CUR_FILE)
-foreach(CUR_FILE ${EXTERN_INLINE_ALIGN_HEADER_LIST})
-	list(APPEND EXTERN_INLINE_SRC_LIST "${CUR_FILE}_aligned.c" "${CUR_FILE}_unaligned.c")
-endforeach(CUR_FILE)
-
-add_custom_target(cleanup COMMAND rm -Rf CMakeFiles/ CMakeCache.txt cmake_install.cmake Makefile PixFC.xcodeproj/ PixFC.build/ CMakeScripts/ Debug/ build/ svn-* *~ libpixfc.a *.o *.ppm unit-testing convert-to-file visual-check ${EXTERN_INLINE_SRC_LIST})
-
-	
