trunk: make pixfc build on non-intel platforms

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,7 +3,10 @@
 include_directories(AFTER include ../src)
 
 if(NOT WIN32)
-	add_definitions(-Wno-trigraphs -msse2)
+	add_definitions(-Wno-trigraphs)
+	if(NOT CMAKE_SYSTEM_PROCESSOR MATCHES "[Aa][Rr][Mm]")
+		add_definitions(-msse2 -mssse3)
+	endif(NOT CMAKE_SYSTEM_PROCESSOR MATCHES "[Aa][Rr][Mm]")
 endif(NOT WIN32)
 
 # Check if we are building in debug mode
