--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,11 +56,28 @@ list(APPEND EXTERN_INLINE_ALIGN_HEADER_LIST
 )
 
 
-# Add compiler options
-if(NOT WIN32 AND NOT CMAKE_SYSTEM_PROCESSOR MATCHES "[Aa][Rr][Mm]")
-	add_definitions(-msse2 -mssse3)
-endif(NOT WIN32 AND NOT CMAKE_SYSTEM_PROCESSOR MATCHES "[Aa][Rr][Mm]")
+# Add target CPU specific compiler options
+if(NOT WIN32)
+	if(PIXFC_TARGET_PROCESSOR MATCHES "Intel")
+		add_definitions(-msse2 -mssse3)
+		if(PIXFC_TARGET_PROCESSOR MATCHES "x86$")
+			add_definitions(-m32)
+			message("32-bit build")
+		elseif(PIXFC_TARGET_PROCESSOR MATCHES "x86_64$")
+			add_definitions(-m64)
+			message("64-bit build")
+		else(PIXFC_TARGET_PROCESSOR MATCHES "x86$")
+			message(FATAL_ERROR "Unknown Intel CPU" ${PIXFC_TARGET_PROCESSOR})
+		endif(PIXFC_TARGET_PROCESSOR MATCHES "x86$")
+	elseif(PIXFC_TARGET_PROCESSOR STREQUAL "ARM")
+		if(NOT DEFINED PIXFC_ARM_TARGET_PROCESSOR)
+			message(FATAL_ERROR "PIXFC_ARM_TARGET_PROCESSOR not defined - define in toolchain CMAKE file: " ${CMAKE_TOOLCHAIN_FILE})
+		endif(NOT DEFINED PIXFC_ARM_TARGET_PROCESSOR)
 
+		message(${PIXFC_ARM_TARGET_PROCESSOR} " build")
+		add_definitions(-mtune=${PIXFC_ARM_TARGET_PROCESSOR})
+	endif(PIXFC_TARGET_PROCESSOR MATCHES "Intel")
+endif(NOT WIN32)
 
 # Check if we are building in debug mode
 if(DEBUG)
