--- a/branches/add-10bit/src/CMakeLists.txt
+++ b/branches/add-10bit/src/CMakeLists.txt
@@ -61,7 +61,7 @@ list(APPEND EXTERN_INLINE_ALIGN_HEADER_LIST
 # specific compiler options
 if(NOT WIN32)
 	if(PIXFC_TARGET_ARCH MATCHES "Intel")
-		add_definitions(-msse2 -mssse3)
+		add_definitions(-msse2 -mssse3 -msse4.1)
 		if(PIXFC_TARGET_ARCH MATCHES "x86$")
 			add_definitions(-m32)
 			message("Build setup for Intel 32-bit CPU")
