--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,6 +28,8 @@ list(APPEND PIXFC_SRC_LIST
 	conversion_routines_from_bgr24_bt601.c
 	conversion_routines_from_bgr24_bt709.c
 	conversion_routines_from_v210.c
+	conversion_routines_from_v210_bt601.c
+	conversion_routines_from_v210_bt709.c
 )
 
 # header files
