add-r210 branch: completed r10k conversions

--- a/branches/add-r210/src/CMakeLists.txt
+++ b/branches/add-r210/src/CMakeLists.txt
@@ -37,6 +37,9 @@ list(APPEND PIXFC_SRC_LIST
 	conversion_routines_from_r210_bt601.c
 	conversion_routines_from_r210_bt709.c
 	conversion_routines_from_r210_scalar.c
+	conversion_routines_from_r10k.c
+	conversion_routines_from_r10k_bt601.c
+	conversion_routines_from_r10k_bt709.c
 )
 
 # header files
